force-app/main/default/objects/Finance__c/Finance__c.object-meta.xml
<CustomObject>
    <label>Finance</label>
    <nameField>
        <label>Finance Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Finance</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>