force-app/main/default/objects/Finance__c/fields/Budget_Code__c.field-meta.xml
<CustomField>
    <fullName>Budget_Code__c</fullName>
    <label>Budget Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>