force-app/main/default/objects/Finance__c/fields/Funding_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Funding_Allocation__c</fullName>
    <label>Funding Allocation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>