force-app/main/default/objects/Finance__c/fields/Grant_Name__c.field-meta.xml
<CustomField>
    <fullName>Grant_Name__c</fullName>
    <formula>IF(
    NOT(ISBLANK(Grant__c)),
    HYPERLINK(
        &quot;/&quot; &amp; Grant__c,  
        Grant__r.Name,       
        &quot;_self&quot;             
    ),
    &quot;&quot;  
)</formula>
    <label>Grant Name</label>
    <type>Text</type>
</CustomField>