force-app/main/default/objects/Finance__c/fields/Total_Funding__c.field-meta.xml
<CustomField>
    <fullName>Total_Funding__c</fullName>
    <label>Total Funding</label>
    <summarizedField>Funding_Allocation__c.Amount__c</summarizedField>
    <summaryForeignKey>Funding_Allocation__c.Finance__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>