force-app/main/default/objects/Finance__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Grant__c</columns>
    <columns>Award_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>